google logo and input for search added on main tag. web's shortcut added

--- a/index.html
+++ b/index.html
@@ -7,21 +7,84 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="https://mail.google.com/mail/?tab=rm&ogbl">Gmail</a></li>
-            <li><a href="https://www.google.com/imghp?hl=en&tab=ri&ogbl">Images</a></li>
-            <li><button>
-                <img  class="rounded" src="images/apps 9 dots.png" alt="apps">
-               </button> </li>
-            <li><button>
-                <img  class="rounded" src="images/aqa.jpg" alt="account" >
-            </button></li>
-        </ul>
-    </nav>
-    
+    <header>
+        <nav>
+            <ul class="list-style-none">
+                <li><a href="https://mail.google.com/mail/?tab=rm&ogbl">Gmail</a></li>
+                <li><a href="https://www.google.com/imghp?hl=en&tab=ri&ogbl">Images</a></li>
+                <li><button>
+                    <img  class="rounded" src="images/apps 9 dots.png" alt="apps">
+                   </button> </li>
+                <li><button>
+                    <img  class="rounded" src="images/aqa.jpg" alt="account" >
+                </button></li>
+            </ul>
+        </nav>
+    </header>
+   
+    <main class="search-bar">
+        <img src="images/google logo.png" alt="logo">
+        <form>
+            <label for="search">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </label>  
+            <input id="search" type="search" placeholder="Search Google or type a URL">
+          <div class="input-buttuns-wrapper">
+            <div class="voice-wrapper">
+                <button type="button" class="voice-button"> <img src="images/google-voice-search-logo.png" alt="voice"> </button>   
+                     <div class="tooltip-google-voice">Search by voice</div>   
+            </div>
+                 <div class="lens-wrapper">
+                    <button type="button" class="lens-button">  <img src="images/Google_Lens_Icon.png" alt="lens">  </button>
+                            <div class="tooltip-google-lens">Search by image</div>
+                 </div>           
+          </div>
+        </form>
+        </main>
+        <section class="web-shortcut">
+            <ul class="list-style-none">
+                <li><a href="https://typeo.top/"><img src="images/typeo.jpg" alt="">
+                    <p>typeo</p>
+                </a>
+                </li>
+                <li> <a href="https://www.arsina.net/"><img src="images/arsina.png" alt="">
+                    <p>arsina</p>
+                </a>
+                    </li>
+                <li><a href="https://www.digikala.com/"><img src="images/digikala.png" alt="">
+                    <p>digikala</p>
+                </a>
+                <li><a href="https://meet.google.com/gmi-jqku-bet"><img src="images/meet.png" alt="">
+                    <p>mr ahangary class</p>
+                </a>
+                   </li>
+                   <li><a href="https://typeo.top/"><img src="images/typeo.jpg" alt="">
+                    <p>typeo</p>
+                </a>
+                </li>
+                <li> <a href="https://www.arsina.net/"><img src="images/arsina.png" alt="">
+                    <p>arsina</p>
+                </a>
+                    </li>
+                <li><a href="https://www.digikala.com/"><img src="images/digikala.png" alt="">
+                    <p>digikala</p>
+                </a>
+                <li><a href="https://meet.google.com/gmi-jqku-bet"><img src="images/meet.png" alt="">
+                    <p>mr ahangary class</p>
+                </a>
+                   </li>
+                   <li><a href="https://www.digikala.com/"><img src="images/digikala.png" alt="">
+                    <p>digikala</p>
+                </a>
+                <li><a href="https://meet.google.com/gmi-jqku-bet"><img src="images/meet.png" alt="">
+                    <p>mr ahangary class</p>
+                </a>
+                   </li>
+            </ul>
+        </section>
 </body>
 </html>
