--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <ul class="list-style-none">
                 <li><a href="https://mail.google.com/mail/?tab=rm&ogbl">Gmail</a></li>
                 <li><a href="https://www.google.com/imghp?hl=en&tab=ri&ogbl">Images</a></li>
+                <br>
+                <br>
                 <li><button>
                     <img  class="rounded" src="images/apps 9 dots.png" alt="apps">
                    </button> </li>
@@ -86,5 +88,22 @@
                    </li>
             </ul>
         </section>
+        <footer>
+            <div class="footer-top">Iran</div>
+            <hr>
+            <div class="footer-bottom">
+                <div class="left">
+                    <a href="#">About</a>
+                    <a href="#">Advertising</a>
+                    <a href="#">Business</a>
+                    <a href="#">How Search works</a>
+                </div>
+                <div class="right">
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Settings</a>
+                </div>
+            </div>
+        </footer>
 </body>
 </html>
